Sorgente/.apex/src/objects/LeadQueue__c.object
<CustomObject>
    <fields>
        <fullName>Cap__c</fullName>
        <label>Cap</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citta__c</fullName>
        <label>Città</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome__c</fullName>
        <label>Cognome</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_ricontatto__c</fullName>
        <label>Data ricontatto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fascia_Oraria__c</fullName>
        <label>Fascia Oraria</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nazione__c</fullName>
        <label>Nazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome__c</fullName>
        <label>Nome</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Origine__c</fullName>
        <label>Origine</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia__c</fullName>
        <label>Provincia</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Richiesta_guida_cartacea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Richiesta guida cartacea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sottocategoria_origine__c</fullName>
        <label>Sottocategoria origine</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Telefono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Via__c</fullName>
        <label>Via</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>LeadQueue</label>
    <nameField>
        <displayFormat>LQ-{000000000}</displayFormat>
        <label>Nome LeadQueue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LeadQueue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>